[package]
name = "sui_txs"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { version = "1.0.0", features = ["serde"] }
anyhow = "1.0.98"
axum = { version = "0.8.3", features = ["macros"] }
axum-macros = "0.5.0"
axum-response-cache = "0.2.0"
bigdecimal = { version = "0.4.8", features = ["serde"] }
binance-async = { git = "https://github.com/kylidboy/binance-async" }
chrono = "0.4.40"
csv = "1.3.1"
enumflags2 = { version = "0.7.12", features = ["serde"] }
futures = "0.3.31"
itertools = "0.14"
mini_macro = "0.2.2"
move-core-types = { git = "https://github.com/mystenlabs/sui", package = "move-core-types", tag = "mainnet-v1.48.2" }
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["gzip", "json"] }
sea-orm = { version = "1.1.10", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-mysql",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk", tag = "mainnet-v1.48.2" }
sui-types = { git = "https://github.com/mystenlabs/sui", tag = "mainnet-v1.48.2" }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uniswap-v3-sdk = "5.0.0"
uuid = "1.17.0"
